[#S12P21E202-157][BE] Feat: 상품/유저 서비스 연결